# Amazon

./: Dockerfile  README.md  docker-compose.yml
src/: pyproject.toml  requirements.txt
src/advert/: admin.py  models.py  serializers.py  urls.py  views.py
src/advert/migrations/: 0001_initial.py  0002_initial.py
src/amazon/: settings.py  urls.py  views.py
src/authentication/: models.py  permissions.py  serializers.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py
src/user_advert_relations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/user_advert_relations/migrations/: 0001_initial.py
